--- a/docker-images/nginx-extended/default.conf
+++ b/docker-images/nginx-extended/default.conf
@@ -1,10 +1,15 @@
 server {
 	listen 80;
+	server_name localhost
 	index index.php index.html index.htm;
 	root /code;
 
+    client_max_body_size 3000M;
+    client_body_buffer_size 2000M;
+
 	location / {
 		try_files $uri $uri/ /index.php?$query_string;
+		index index.php index.html index.htm;
 		autoindex on;
 	}
 
