--- a/docker-images/nginx-extended/default.conf
+++ b/docker-images/nginx-extended/default.conf
@@ -2,7 +2,7 @@ server {
 	listen 80;
 	server_name localhost
 	index index.php index.html index.htm;
-	root /code;
+	root /code/public;
 
     client_max_body_size 3000M;
     client_body_buffer_size 2000M;
