--- a/docker-images/php-extended/Dockerfile
+++ b/docker-images/php-extended/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     nano \
     git \
     zlib1g-dev \
+    libzip-dev \
     && apt-get -y autoclean
 
 # nvm environment variables
@@ -17,14 +18,14 @@ ENV NODE_VERSION 8.4
 
 # Install nvm with node and npm
 RUN curl https://raw.githubusercontent.com/creationix/nvm/v0.31.2/install.sh | bash \
-    && . $NVM_DIR/nvm.sh \
-    && nvm install $NODE_VERSION \
-    && nvm alias default $NODE_VERSION \
+    && . ${NVM_DIR}/nvm.sh \
+    && nvm install ${NODE_VERSION} \
+    && nvm alias default ${NODE_VERSION} \
     && nvm use default
 
 # add node and npm to path so the commands are available
-ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
-ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
+ENV NODE_PATH ${NVM_DIR}/v${NODE_VERSION}/lib/node_modules
+ENV PATH ${NVM_DIR}/versions/node/v${NODE_VERSION}/bin:$PATH
 
 # Libs
 RUN apt-get update && apt-get install -y \
@@ -33,46 +34,50 @@ RUN apt-get update && apt-get install -y \
         libpng-dev \
         libjpeg-dev \
         libpng-dev \
+        libonig-dev \
         libicu-dev \
         libmagickwand-dev --no-install-recommends \
         libcurl4-openssl-dev \
-        libxslt1-dev
+        libxslt1-dev \
+        libwebp-dev \
+        libjpeg62-turbo-dev \
+        libpng-dev libxpm-dev \
+        libfreetype6-dev
 
 # Pecl packages
 RUN pecl install \
     imagick \
     xdebug \
-    zip
+    zip \
+    mcrypt-1.0.3
 
 # Php modules
-RUN docker-php-ext-install -j$(nproc) \
+RUN docker-php-ext-install \
     json \
-    mbstring \
     opcache \
     pdo \
     pdo_mysql \
     mysqli \
     iconv \
-    mcrypt \
     gd \
-    mbstring \
     intl \
     curl \
     exif \
     xsl \
-    zip
+    zip \
+    bz2
 
 # gd modules config
-RUN docker-php-ext-configure gd \
-    --enable-gd-native-ttf \
-    --with-freetype-dir=/usr/include/freetype2 \
-    --with-png-dir=/usr/include \
-    --with-jpeg-dir=/usr/include
+RUN docker-php-ext-configure gd
 
 # php modules enable
 RUN docker-php-ext-enable \
     imagick \
     xdebug \
-    xsl \
-    zip \
-    gd
+    mcrypt
+
+WORKDIR /code
+
+COPY zz-docker.conf /usr/local/etc/php-fpm.d/zz-docker.conf
+
+EXPOSE 9000
