Updated: - Added PHP 8 - Added MYSQL 8 - Updated Nginx - Added non-root user for php-fpm container

--- a/docker-images/nginx-extended/default.conf
+++ b/docker-images/nginx-extended/default.conf
@@ -1,24 +1,58 @@
 server {
-	listen 80;
+    listen 80;
+    server_name localhost;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
 	server_name localhost
+    ServerAlias www.localhost
+
+    ssl on;
+    ssl_certificate     /etc/nginx/localhost.crt;
+    ssl_certificate_key /etc/nginx/localhost.key;
+
 	index index.php index.html index.htm;
-	root /code/public;
+	root /var/www/public;
 
     client_max_body_size 3000M;
     client_body_buffer_size 2000M;
 
+	set $entryPoint index.php;
+	if ($http_cookie ~* "XDEBUG_SESSION=") {
+		set $entryPoint app_dev.php;
+	}
+
+	location /img/ {
+		try_files $uri @redirect;
+	}
+	location /media/ {
+		try_files $uri @redirect;
+	}
+	location /app/ {
+	   autoindex on;
+	}
 	location / {
-		try_files $uri $uri/ /index.php?$query_string;
-		index index.php index.html index.htm;
+		try_files $uri /$entryPoint?$query_string;
 		autoindex on;
 	}
 
 	location ~ \.php$ {
-		try_files $uri /index.php =404;
+		try_files $uri $uri/ /index.php =404;
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		fastcgi_buffer_size 32k;
+        fastcgi_buffers 4 32k;
 		fastcgi_pass php-fpm:9000;
 		fastcgi_index index.php;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 		include fastcgi_params;
 	}
+
+	location @redirect {
+        return 301 https://localhost$request_uri;
+    }
 }
