--- a/docker.env.example
+++ b/docker.env.example
@@ -11,7 +11,15 @@ REDIS_HOST=redis
 #elastic
 cluster.name=docker-cluster
 bootstrap.memory_lock=true
-ES_JAVA_OPTS=-Xms512m -Xmx512m
+ES_JAVA_OPTS="-Xms512m -Xmx512m"
 
 #pma
 PMA_HOST=mysql
+
+#php
+DATABASE_URL=mysql://docker:docker@mysql/docker?charset=utf8mb4
+APP_ENV=dev
+XDEBUG_CONFIG="discover_client_host=true start_with_request=yes client_host=host.docker.internal log_level=0"
+XDEBUG_MODE=develop,debug
+XDEBUG_SESSION=1
+PHP_IDE_CONFIG=serverName=php-fpm
