--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,46 @@
-version: '2'
+version: "3.4"
 services:
     mysql:
-        image: 'mysql:5.7'
-        expose:
-          - '3306'
-        ports:
-            - '3306:3306'
-        volumes:
-            - ./data/mysql:/var/lib/mysql
-        restart: on-failure
-        env_file:
-            - docker.env
+      image: mysql:8.0
+      command: --default-authentication-plugin=mysql_native_password
+      restart: always
+      env_file:
+        - docker.env
+      volumes:
+          - ${MYSQL_VOLUME:-./data/mysql}:/var/lib/mysql
     nginx:
-        image: 'nginx:1.13'
+        image: 'nginx:1.20'
         ports:
-            - '80:80'
-        restart: on-failure
+          - '80:80'
+          - '443:443'
+        restart: always
         volumes:
-            - ./docker-images/nginx-extended/default.conf:/etc/nginx/conf.d/default.conf
-            - ./:/code
+            - ${ROOT_DIR:-.}/:/var/www
+            - ${BUILD_CONTEXT:-.}/docker-images/nginx-extended/default.conf:/etc/nginx/conf.d/default.conf
+            - ${BUILD_CONTEXT:-.}/docker-images/nginx-extended/ssl/localhost.crt:/etc/nginx/localhost.crt
+            - ${BUILD_CONTEXT:-.}/docker-images/nginx-extended/ssl/localhost.key:/etc/nginx/localhost.key
     php-fpm:
-        build: ./docker-images/php-extended
+        build:
+          context: .
+          dockerfile: ./docker-images/php-extended/Dockerfile
+        image: "php-fpm"
         env_file:
           - docker.env
-        restart: on-failure
+        restart: always
         volumes:
-            - ./docker-images/php-extended/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
-            - ./docker-images/php-extended/php.ini:/usr/local/etc/php/conf.d/custom.ini
-            - ./:/code
+            - ${BUILD_CONTEXT:-.}/docker-images/php-extended/php.ini:/usr/local/etc/php/conf.d/custom.ini
+            - ${ROOT_DIR:-.}/:/var/www
+        depends_on:
+          - mysql
+          - nginx
+        command: [ "php-fpm" ]
     redis:
       image: bitnami/redis:latest
       user: root
-      environment:
-        ALLOW_EMPTY_PASSWORD: 'yes'
+      env_file:
+        - docker.env
       volumes:
-        - ./data/redis:/bitnami
+        - ${REDIS_VOLUME:-./data/redis}:/bitnami
     mongodb:
       image: mongo:latest
       ports:
